modify homepage logos

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                <p class="about__description">
                   See the future with high-performance electric cars produced by renowed brands. They feature futuristic builds and designs with new and innovative platforms that last a long time.
                </p>
-               <a href="" class="button__about">KNOW MORE</a>
+               <a href="shop.html" class="button__about" >KNOW MORE</a>
             </div>
          </div>
       </section>
@@ -214,7 +214,7 @@
             <source src="movie.ogg" type="video/ogg">
             Your browser does not support the video tag.
          </video>
-      </center>   
+      </center>
 
       <!-- Slider Shop Section -->
       <section class="popular section" style="margin-top: 3%;">
@@ -357,15 +357,54 @@
          </div>
       </section>
 
-      <!-- End Slider Shop Section -->
+      <!-- End Slider Shop Section -->  
 
       <!-- Offer Section -->
-      <section class="offer section">
-         
+      <section class="offer section" style="margin-top: 3%;">
+         <div class="offer__container container grid">
+            <img src="/images/offer-bg.png" alt="" class="offer__bg">
+
+            <div class="offer__data">
+               <h2 class="section__title offer__title">
+                  Do you Want to Receive <br> Special Offers?
+               </h2>
+
+               <p class="offer__description">
+                  Be the first to receive all the information about our products and new cars by email by subscribing to our mailing list
+               </p>
+
+               <a href="" class="button">
+                  Subscribe Now
+               </a>
+            </div>
+            <img src="/images/offer.png" alt="" class="offer__img">
+         </div>
+      </section> 
+      <!-- End Offer Section -->
+
+      <section class="logos section">
+         <div class="logos__container container grid">
+            <div class="logos__content">
+               <img src="/images/logos1.png" alt="" class="logos__img">
+            </div>
+            <div class="logos__content">
+               <img src="/images/logos2.png" alt="" class="logos__img">
+            </div>
+            <div class="logos__content">
+               <img src="/images/logos3.png" alt="" class="logos__img">
+            </div>
+            <div class="logos__content">
+               <img src="/images/logos4.png" alt="" class="logos__img">
+            </div>
+            <div class="logos__content">
+               <img src="/images/logos5.png" alt="" class="logos__img">
+            </div>
+            <div class="logos__content">
+               <img src="/images/logos6.png" alt="" class="logos__img">
+            </div>
+         </div>
       </section>
 
-      
- 
    <script src="js/jquery.min.js"></script>
    <script src="js/bootstrap.min.js"></script>
    <script src="js/superfish.js"></script>
