--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
    <!-- Swiper CSS-->
    <link rel="stylesheet" href="/css/swiper-bundle.min.css">
+   <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 </head>
 
 <body class="box-layout">
@@ -208,14 +209,6 @@
       </section>
       <!-- End Future Section -->
 
-      <center>
-         <video autoplay muted loop width="70%" height="auto">
-            <source src="video/video1.mp4" type="video/mp4">
-            <source src="movie.ogg" type="video/ogg">
-            Your browser does not support the video tag.
-         </video>
-      </center>
-
       <!-- Slider Shop Section -->
       <section class="popular section" style="margin-top: 3%;">
          <h2 class="section__title" style="text-align: center; color: black; margin-bottom: 2%;">
@@ -239,13 +232,13 @@
                            <i class="ri-charging-pile-2-line"></i> Electric
                         </div>
                         <div class="popular__data-group">
-                           <i class="ri-charging-pile-2-line"></i> 580 Cv
+                           <i class="ri-flashlight-fill"></i> 580 Cv
                         </div>
                      </div>
                   </div>
                   <h3 class="popular__price">€ 175.900</h3>
                   <button class="popular__button">
-                     <i class="bi bi-bag-check"></i>
+                     <i class="ri-shopping-bag-line"></i>
                   </button>
                </article>
 
@@ -265,13 +258,13 @@
                            <i class="ri-charging-pile-2-line"></i> Electric
                         </div>
                         <div class="popular__data-group">
-                           <i class="ri-charging-pile-2-line"></i> 580 Cv
+                           <i class="ri-flashlight-fill"></i> 580 Cv
                         </div>
                      </div>
                   </div>
                   <h3 class="popular__price">€ 114.900</h3>
                   <button class="popular__button">
-                     <i class="bi bi-bag-check"></i>
+                     <i class="ri-shopping-bag-line"></i>
                   </button>
                </article>
 
@@ -291,13 +284,13 @@
                            <i class="ri-charging-pile-2-line"></i> Electric
                         </div>
                         <div class="popular__data-group">
-                           <i class="ri-charging-pile-2-line"></i> 580 Cv
+                           <i class="ri-flashlight-fill"></i> 580 Cv
                         </div>
                      </div>
                   </div>
                   <h3 class="popular__price">€ 150.900</h3>
                   <button class="popular__button">
-                     <i class="bi bi-bag-check"></i>
+                     <i class="ri-shopping-bag-line"></i>
                   </button>
                </article>
 
@@ -317,13 +310,13 @@
                            <i class="ri-charging-pile-2-line"></i> Electric
                         </div>
                         <div class="popular__data-group">
-                           <i class="ri-charging-pile-2-line"></i> 580 Cv
+                           <i class="ri-flashlight-fill"></i> 580 Cv
                         </div>
                      </div>
                   </div>
                   <h3 class="popular__price">€ 125.900</h3>
                   <button class="popular__button">
-                     <i class="bi bi-bag-check"></i>
+                     <i class="ri-shopping-bag-line"></i>
                   </button>
                </article>
 
@@ -343,13 +336,13 @@
                            <i class="ri-charging-pile-2-line"></i> Electric
                         </div>
                         <div class="popular__data-group">
-                           <i class="ri-charging-pile-2-line"></i> 580 Cv
+                           <i class="ri-flashlight-fill"></i> 580 Cv
                         </div>
                      </div>
                   </div>
                   <h3 class="popular__price">€ 128.900</h3>
                   <button class="popular__button">
-                     <i class="bi bi-bag-check"></i>
+                     <i class="ri-shopping-bag-line"></i>
                   </button>
                </article>
             </div>
@@ -373,14 +366,22 @@
                   Be the first to receive all the information about our products and new cars by email by subscribing to our mailing list
                </p>
 
-               <a href="" class="button">
-                  Subscribe Now
+               <a href="" class="offer__button">
+                  SUBSCRIBE NOW
                </a>
             </div>
             <img src="/images/offer.png" alt="" class="offer__img">
          </div>
       </section> 
       <!-- End Offer Section -->
+
+      <center>
+         <video autoplay muted loop width="70%" height="auto" style="margin-top: 3%;">
+            <source src="video/video1.mp4" type="video/mp4">
+            <source src="movie.ogg" type="video/ogg">
+            Your browser does not support the video tag.
+         </video>
+      </center>
 
       <section class="logos section">
          <div class="logos__container container grid">
@@ -401,6 +402,71 @@
             </div>
             <div class="logos__content">
                <img src="/images/logos6.png" alt="" class="logos__img">
+            </div>
+         </div>
+      </section>
+
+      <section class="footer section">
+         <div class="shape shape__big"></div>
+         <div class="shape shape__small"></div>
+         <div class="footer__container container grid">
+            <div class="footer_content">
+               <a href="" class="footer__logo">
+                  <i class="ri-steering-fill"></i>VSB-MOTORS
+               </a>
+               <p class="footer__description">
+                  We offer the best car of <br> the most recognized brands in <br> the world
+               </p>
+            </div>
+            <div class="footer_content">
+               <h3 class="footer__title">Company</h3>
+               <ul class="footer__links">
+                  <li>
+                     <a href="" class="footer__link">About</a>
+                  </li>
+                  <li>
+                     <a href="" class="footer__link">Cars</a>
+                  </li>
+                  <li>
+                     <a href="" class="footer__link">History</a>
+                  </li>
+                  <li>
+                     <a href="" class="footer__link">Store</a>
+                  </li>
+               </ul>
+            </div>
+
+            <div class="footer_content">
+               <h3 class="footer__title">Information</h3>
+               <ul class="footer__links">
+                  <li>
+                     <a href="" class="footer__link">Request a quote</a>
+                  </li>
+                  <li>
+                     <a href="" class="footer__link">Find a dealer</a>
+                  </li>
+                  <li>
+                     <a href="" class="footer__link">Contact Us</a>
+                  </li>
+                  <li>
+                     <a href="" class="footer__link">Services</a>
+                  </li>
+               </ul>
+            </div>
+
+            <div class="footer_content">
+               <h3 class="footer__title">Follow Us</h3>
+               <ul class="footer__social">
+                  <a href="https://www.facebook.com/" target="_blank" class="footer__social-link">
+                     <i class="ri-facebook-fill"></i>
+                  </a>
+                  <a href="https://www.instagram.com" target="_blank" class="footer__social-link">
+                     <i class="ri-instagram-line"></i>
+                  </a>
+                  <a href="https://www.twitter.com" target="_blank" class="footer__social-link">
+                     <i class="ri-twitter-line"></i>
+                  </a>
+               </ul>
             </div>
          </div>
       </section>
