--- a/my_transaction.html
+++ b/my_transaction.html
@@ -58,27 +58,62 @@
       </div>
    </div>
 
+   
+
+
+
+
+
+   <div class="vehicle_card_row_container">
+   <div class="vehicle_card">
+      <div class="row">
+         <div class="col">
+         <p class="title_car" name="marca_modello"> Mercedes-Benz Classe A</p>   
+         </div>
+      </div>
+      <div class="row"></div>
+         <div class="col">
+            <a href="single_product.html"><img src="images/sfondo_sell.jpg" name="img_car"></a>
+         </div>
+      <div class="row">
+         <div class="col">
+            <p class="details">Prezzo</p>
+            <br>
+            <p name="carburante" class="desc">€ 1500</p>
+         </div>
+         <div class="col">
+            <p class="details">Data di acquisto</p>
+            <br>
+            <p name="anno" class="desc">16/07/2021</p>
+         </div>
+         <div class="col"></div>
+      </div>
+   </div>
+   </div>
+   
+
+
    <div class="container_card">
       <div class="products">
          <div class="vehicle_card_row_container">
             <div class="vehicle_card">
-               <h4 class="title_car" name="marca_modello">Mercedes-Benz Classe A</h4>
+               <p class="title_car" name="marca_modello">Mercedes-Benz Classe A</p>
                <a href="single_product.html"><img src="images/sfondo_sell.jpg" name="img_car"></a>
                <table class="details">
                   <tbody>
                      <tr>
                         <td>
-                           <h5>Prezzo</h5>
+                           <p>Prezzo</p>
                            <hr class="line">
                            <p name="carburante" class="desc">€ 1500</p>
                         </td>
                         <td>
-                           <h5>Data di acquisto</h5>
+                           <p>Data di acquisto</p>
                            <hr class="line">
                            <p name="anno" class="desc">16/07/2021</p>
                         </td>
                         <td>
-                           <h5>Acquirente</h5>
+                           <p>Acquirente</p>
                            <hr class="line">
                            <p name="potenza" class="desc">Verlanti Alessandro</p>
                         </td>
