messo a posto l'attributo name del p per prezzo

--- a/vendor_reg.html
+++ b/vendor_reg.html
@@ -98,7 +98,7 @@
       </div>
       <div class="row row-cols-2 align-items-center">
          <div class="col-3">
-            <p name="carburante" class="desc">€ 1500</p>
+            <p name="prezzo" class="desc">€ 1500</p>
          </div>
          <div class="col-3 ">
             <p name="annor" class="desc">16/07/2021</p>
@@ -138,7 +138,7 @@
          </div>
          <div class="row row-cols-2 align-items-center">
             <div class="col-3">
-               <p name="carburante" class="desc">€ 1500</p>
+               <p name="prezzo" class="desc">€ 1500</p>
             </div>
             <div class="col-3 ">
                <p name="annor" class="desc">16/07/2021</p>
@@ -178,7 +178,7 @@
             </div>
             <div class="row row-cols-2 align-items-center">
                <div class="col-3">
-                  <p name="carburante" class="desc">€ 1500</p>
+                  <p name="prezzo" class="desc">€ 1500</p>
                </div>
                <div class="col-3 ">
                   <p name="annor" class="desc">16/07/2021</p>
@@ -221,7 +221,7 @@
       </div>
       <div class="row row-cols-2 align-items-center">
          <div class="col-3">
-            <p name="carburante" class="desc">€ 1500</p>
+            <p name="prezzo" class="desc">€ 1500</p>
          </div>
          <div class="col-3 ">
             <p name="annor" class="desc">16/07/2021</p>
@@ -261,7 +261,7 @@
          </div>
          <div class="row row-cols-2 align-items-center">
             <div class="col-3">
-               <p name="carburante" class="desc">€ 1500</p>
+               <p name="prezzo" class="desc">€ 1500</p>
             </div>
             <div class="col-3 ">
                <p name="annor" class="desc">16/07/2021</p>
@@ -301,7 +301,7 @@
             </div>
             <div class="row row-cols-2 align-items-center">
                <div class="col-3">
-                  <p name="carburante" class="desc">€ 1500</p>
+                  <p name="prezzo" class="desc">€ 1500</p>
                </div>
                <div class="col-3 ">
                   <p name="annor" class="desc">16/07/2021</p>
@@ -344,7 +344,7 @@
       </div>
       <div class="row row-cols-2 align-items-center">
          <div class="col-3">
-            <p name="carburante" class="desc">€ 1500</p>
+            <p name="prezzo" class="desc">€ 1500</p>
          </div>
          <div class="col-3 ">
             <p name="annor" class="desc">16/07/2021</p>
@@ -384,7 +384,7 @@
          </div>
          <div class="row row-cols-2 align-items-center">
             <div class="col-3">
-               <p name="carburante" class="desc">€ 1500</p>
+               <p name="prezzo" class="desc">€ 1500</p>
             </div>
             <div class="col-3 ">
                <p name="annor" class="desc">16/07/2021</p>
@@ -424,7 +424,7 @@
             </div>
             <div class="row row-cols-2 align-items-center">
                <div class="col-3">
-                  <p name="carburante" class="desc">€ 1500</p>
+                  <p name="prezzo" class="desc">€ 1500</p>
                </div>
                <div class="col-3 ">
                   <p name="annor" class="desc">16/07/2021</p>
