modify shop and homepage

--- a/shop.html
+++ b/shop.html
@@ -229,56 +229,60 @@
          <div class="vehicle_card_row_container">
             <div class="vehicle_card">
                <h4 class="title_car" name="marca_modello">Mercedes-Benz Classe A</h4>
-               <a href="single_product.html"><img src="images/sfondo_sell.jpg" name="img_car"></a>
-               <h3 class="price">€ 1500</h3>
-               <table class="details">
-                  <tbody>
-                     <tr>
-                        <td>
-                           <h5>Kilometraggio</h5>
-                           <hr class="line">
-                           <p name="carburante" class="desc">0 km</p>
-                        </td>
-                        <td>
-                           <h5>Anno</h5>
-                           <hr class="line">
-                           <p name="anno" class="desc">2007</p>
-                        </td>
-                        <td>
-                           <h5>Potenza</h5>
-                           <hr class="line">
-                           <p name="potenza" class="desc">70 kW</p>
-                        </td>
-                        <td>
-                           <h5>Cilindrata</h5>
-                           <hr class="line">
-                           <p name="cilindrata" class="desc">2000 CC</p>
-                        </td>
-                     </tr>
-                     <tr>
-                        <td>
-                           <h5>Cavalli</h5>
-                           <hr class="line">
-                           <p name="cavalli" class="desc">250 CV</p>
-                        </td>
-                        <td>
-                           <h5>Cambio</h5>
-                           <hr class="line">
-                           <p name="cambio" class="desc">Manuale</p>
-                        </td>
-                        <td>
-                           <h5>Stato</h5>
-                           <hr class="line">
-                           <p name="stato" class="desc">Nuovo</p>
-                        </td>
-                        <td>
-                           <h5>Proprietario</h5>
-                           <hr class="line">
-                           <p name="n_proprietari" class="desc">2</p>
-                        </td>       
-                     </tr>
-                  </tbody>
-               </table>
+               <a href="single_product.html"><img src="images/sfondo_sell.jpg" name="img_car" class="image"></a>
+               <div class="overlay">
+                  <div class="text">
+                     <h3 class="price">€ 1500</h3>
+                     <table class="details">
+                        <tbody>
+                           <tr>
+                              <td>
+                                 <h5>Kilometraggio</h5>
+                                 <hr class="line">
+                                 <p name="carburante" class="desc">0 km</p>
+                              </td>
+                              <td>
+                                 <h5>Anno</h5>
+                                 <hr class="line">
+                                 <p name="anno" class="desc">2007</p>
+                              </td>
+                              <td>
+                                 <h5>Potenza</h5>
+                                 <hr class="line">
+                                 <p name="potenza" class="desc">70 kW</p>
+                              </td>
+                              <td>
+                                 <h5>Cilindrata</h5>
+                                 <hr class="line">
+                                 <p name="cilindrata" class="desc">2000 CC</p>
+                              </td>
+                           </tr>
+                           <tr>
+                              <td>
+                                 <h5>Cavalli</h5>
+                                 <hr class="line">
+                                 <p name="cavalli" class="desc">250 CV</p>
+                              </td>
+                              <td>
+                                 <h5>Cambio</h5>
+                                 <hr class="line">
+                                 <p name="cambio" class="desc">Manuale</p>
+                              </td>
+                              <td>
+                                 <h5>Stato</h5>
+                                 <hr class="line">
+                                 <p name="stato" class="desc">Nuovo</p>
+                              </td>
+                              <td>
+                                 <h5>Proprietario</h5>
+                                 <hr class="line">
+                                 <p name="n_proprietari" class="desc">2</p>
+                              </td>       
+                           </tr>
+                        </tbody>
+                     </table>
+                  </div>   
+               </div>
             </div>
             
             <div class="vehicle_card">
