--- a/index.html
+++ b/index.html
@@ -388,22 +388,22 @@
    <section class="logos section">
       <div class="logos__container container grid">
          <div class="logos__content">
-            <img src="/images/logos1.png" alt="" class="logos__img">
+            <a href="https://www.porsche.com/italy/" target="_blank"><img src="/images/logos1.png" alt="" class="logos__img"></a>
          </div>
          <div class="logos__content">
-            <img src="/images/logos2.png" alt="" class="logos__img">
+            <a href="https://www.audi.it/it/web/it.html" target="_blank"><img src="/images/logos2.png" alt="" class="logos__img"></a>
          </div>
          <div class="logos__content">
-            <img src="/images/logos3.png" alt="" class="logos__img">
+            <a href="https://www.tesla.com/it_it" target="_blank"><img src="/images/logos3.png" alt="" class="logos__img"></a>
          </div>
          <div class="logos__content">
-            <img src="/images/logos4.png" alt="" class="logos__img">
+            <a href="https://www.lamborghini.com/it-en" target="_blank"><img src="/images/logos4.png" alt="" class="logos__img"></a>
          </div>
          <div class="logos__content">
-            <img src="/images/logos5.png" alt="" class="logos__img">
+            <a href="https://www.bmw.it/it/home.html" target="_blank"><img src="/images/logos5.png" alt="" class="logos__img"></a>
          </div>
          <div class="logos__content">
-            <img src="/images/logos6.png" alt="" class="logos__img">
+            <a href="https://www.mitsubishi-motors.it/" target="_blank"><img src="/images/logos6.png" alt="" class="logos__img"></a>
          </div>
       </div>
    </section>
