--- a/index.html
+++ b/index.html
@@ -351,6 +351,32 @@
 
    <!-- End Slider Shop Section -->  
 
+   <!--Features Section-->
+   <section class="features section">
+      <h2 class="features__title">
+         More Features
+      </h2>
+      <div class="features__container container">
+         <div class="features__group">
+            <img src="/images/features.png" alt="" class="features__img">
+            <div class="features__card features__card-1">
+               <h3 class="features__card-title">800v</h3>
+               <p class="features__card-description">Turbo <br> Chargin</p>
+            </div>
+            <div class="features__card features__card-2">
+               <h3 class="features__card-title">350</h3>
+               <p class="features__card-description">Km <br> Range</p>
+            </div>
+            <div class="features__card features__card-3">
+               <h3 class="features__card-title">480</h3>
+               <p class="features__card-description">Km <br> Travel</p>
+            </div>
+         </div>
+      </div>
+      <img src="/images/map.svg" alt="" class="features__map">
+   </section>
+   <!--End Features Section-->
+
    <!-- Offer Section -->
    <section class="offer section">
       <div class="offer__container container grid">
@@ -383,6 +409,8 @@
       </video>
    </center>
    <!--End Video -->
+
+   
 
    <!--Logos Section -->
    <section class="logos section">
