aggiunta commenti per ricordare

--- a/vendor_sales.html
+++ b/vendor_sales.html
@@ -1,3 +1,7 @@
+<!-- Inserire reponsiveness per breakpoint -->
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -82,7 +86,7 @@
                <a href="single_product.html"><img src="images/sfondo_sell.jpg" name="img_car"></a>
             </div>
          </div>
-         <div class="row row-cols-3 align-items-center">
+         <div class="row align-items-center">
             <div class="col-3">
                <p class="details">Prezzo</p>
             </div>
@@ -93,7 +97,7 @@
                <p class="details">Concessionaria</p>
             </div>
          </div>
-         <div class="row row-cols-3 align-items-center">
+         <div class="row align-items-center">
             <div class="col-3">
                <p name="prezzo" class="desc">€ 1500</p>
             </div>
@@ -187,7 +191,7 @@
             <a href="single_product.html"><img src="images/sfondo_sell.jpg" name="img_car"></a>
          </div>
       </div>
-      <div class="row row-cols-3 align-items-center">
+      <div class="row row-cols-auto align-items-center">
          <div class="col-3">
             <p class="details">Prezzo</p>
          </div>
@@ -198,7 +202,7 @@
             <p class="details">Concessionaria</p>
          </div>
       </div>
-      <div class="row row-cols-3 align-items-center">
+      <div class="row row-cols-auto align-items-center">
          <div class="col-3">
             <p name="prezzo" class="desc">€ 1500</p>
          </div>
