--- a/shop.html
+++ b/shop.html
@@ -15,6 +15,11 @@
    <!-- Styles CSS-->
    <link href="css/shop.css" rel="stylesheet">
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+   <!-- Footer per logo e footer -->
+   <link rel="stylesheet" href="/css/footer_logo.css">
+      <!-- Swiper CSS-->
+      <link rel="stylesheet" href="/css/swiper-bundle.min.css">
+      <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 </head>
 <body>
    <div class="header-inner">
@@ -862,8 +867,98 @@
       </div>
    </div>
    
-       
+  <!--Logos Section -->
+  <section class="logos section">
+   <div class="logos__container container grid">
+      <div class="logos__content">
+         <a href="https://www.porsche.com/italy/" target="_blank"><img src="/images/logos1.png" alt="" class="logos__img"></a>
+      </div>
+      <div class="logos__content">
+         <a href="https://www.audi.it/it/web/it.html" target="_blank"><img src="/images/logos2.png" alt="" class="logos__img"></a>
+      </div>
+      <div class="logos__content">
+         <a href="https://www.tesla.com/it_it" target="_blank"><img src="/images/logos3.png" alt="" class="logos__img"></a>
+      </div>
+      <div class="logos__content">
+         <a href="https://www.lamborghini.com/it-en" target="_blank"><img src="/images/logos4.png" alt="" class="logos__img"></a>
+      </div>
+      <div class="logos__content">
+         <a href="https://www.bmw.it/it/home.html" target="_blank"><img src="/images/logos5.png" alt="" class="logos__img"></a>
+      </div>
+      <div class="logos__content">
+         <a href="https://www.mitsubishi-motors.it/" target="_blank"><img src="/images/logos6.png" alt="" class="logos__img"></a>
+      </div>
+   </div>
+</section>
+<!-- End Logos Section -->
 
+   
+  <!--Footer Section-->
+  <section class="footer section">
+   <div class="shape shape__big"></div>
+   <div class="shape shape__small"></div>
+   <div class="footer__container container grid">
+      <div class="footer_content">
+         <a href="" class="footer__logo">
+            <i class="ri-steering-fill"></i>VSB-MOTORS
+         </a>
+         <p class="footer__description">
+            We offer the best car of <br> the most recognized brands in <br> the world
+         </p>
+      </div>
+      <div class="footer_content">
+         <h3 class="footer__title">Company</h3>
+         <ul class="footer__links">
+            <li>
+               <a href="" class="footer__link">About</a>
+            </li>
+            <li>
+               <a href="" class="footer__link">Cars</a>
+            </li>
+            <li>
+               <a href="" class="footer__link">History</a>
+            </li>
+            <li>
+               <a href="" class="footer__link">Store</a>
+            </li>
+         </ul>
+      </div>
+
+      <div class="footer_content">
+         <h3 class="footer__title">Information</h3>
+         <ul class="footer__links">
+            <li>
+               <a href="" class="footer__link">Request a quote</a>
+            </li>
+            <li>
+               <a href="" class="footer__link">Find a dealer</a>
+            </li>
+            <li>
+               <a href="" class="footer__link">Contact Us</a>
+            </li>
+            <li>
+               <a href="" class="footer__link">Services</a>
+            </li>
+         </ul>
+      </div>
+
+      <div class="footer_content">
+         <h3 class="footer__title">Follow Us</h3>
+         <ul class="footer__social">
+            <a href="https://www.facebook.com/" target="_blank" class="footer__social-link">
+               <i class="ri-facebook-fill"></i>
+            </a>
+            <a href="https://www.instagram.com" target="_blank" class="footer__social-link">
+               <i class="ri-instagram-line"></i>
+            </a>
+            <a href="https://www.twitter.com" target="_blank" class="footer__social-link">
+               <i class="ri-twitter-line"></i>
+            </a>
+         </ul>
+      </div>
+   </div>
+</section>
+<!-- End Footer Section -->
    <script type="text/javascript">
       function changePlaceholderSelect(sel){
          sel.style.color = "#fff";
