Modifiche per slider e attributi

--- a/client_sales.html
+++ b/client_sales.html
@@ -1,6 +1,6 @@
 <!-- Inserire reponsiveness per breakpoint -->
 
-
+<!--  commento : La pagina è uguale a prima, credo -->
 
 <!DOCTYPE html>
 <html lang="en">
