--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@
                            <li class="has-children">
                               <a href="#">MY TRANSACTION</a>
                               <ul class="dropdown" style="border-top: 3px solid black; position: absolute; padding: 0; left: -100%; top: 30%;">
-                                 <li><a href="vendor_sales.html">SALES</a></li>
-                                 <li><a href="vendor_reg.html">REGISTRATIONS</a></li>
+                                 <!-- commento : Aggiunto href riguardo le nuove pagine, ma non mi funzia -->
+                                 <li><a href="client_sales.html">SALES</a></li>
+                                 <li><a href="registrazione_mytr.html">REGISTRATIONS</a></li>
                               </ul>
                            </li>   
                            <li><a href="#">LOG OUT</a></li>
